crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__if__class_in_else.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/if/class_in_else.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Expect expression.
   ╭─[craftinginterpreters/test/if/class_in_else.lox:2:22]
   │
 2 │ if (true) "ok"; else class Foo {}
   │                      ─────  
───╯
