crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__if__fun_in_then.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/if/fun_in_then.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Expect expression.
   ╭─[craftinginterpreters/test/if/fun_in_then.lox:2:11]
   │
 2 │ if (true) fun foo() {}
   │           ───  
───╯
