crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__if__if.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/if/if.lox
---
success: true
exit_code: 0
----- stdout -----
good
block
true

----- stderr -----
